# autobutler

./: .gitignore  .goreleaser.yaml  .markdownlint.json  .markdownlint.yaml  .prettierignore  .prettierrc.json  .yaml-lint.json  .yq  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  [Content_Types].xml  bun.lockb  compose.yml  devcontainer.compose.yml  eslint.config.js  go.mod  go.sum  main.go  package-lock.json  package.json  playwright.config.ts  prompt.txt  sqlc.yaml  test-selection.html
.devcontainer/: compose.devcontainer.yml  devcontainer.json  docker-compose.devcontainer.yml
.github/: ci.yaml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/workflows/: autobutler-build.yml  autobutler-release.yml  autobutler-test.yml  autobutler.ai-cd.yml  autobutler.ai-ci.yml  autobutler.org-cd.yml  autobutler.org-ci.yml  backend-build.yml  backend-lint.yml  backend-release.yml  backend-test.yml  cd-azure.yml  ci.yaml  devcontainer.yml  dotai-cd.yml  dotai-ci.yml  exoflow.cloud-cd.yml  exoflow.cloud-ci.yaml  lint.yml  playwright.yml  pr-label.yml  test-backend.yml
.postman/: autobutler.postman_collection.json
.thunder/: butlerapi.postman.json  butlerapi.thunder.json
_rels/: .rels
apps/: README.md
apps/autobutler-app/: Makefile  README.md  autobutler.py  pyproject.toml
apps/autobutler-app/src/: autobutler.py
apps/autobutler-home/: docker-compose.yml
apps/autobutler-user/: nuxt.config.ts
cmd/: install.go
docProps/: core.xml
docs/: README.md  azure-deployment.md  index.md
infra/: Makefile
libs/flowtools/: Makefile  README.md  pyproject.toml
libs/flowtools/src/flowtools/: db.py
libs/flowtools/tests/: test_db.py
scripts/: pistrap
src/: README.md
src/dotai/backend/: Makefile  config.py  pyproject.toml  requirements.txt
src/dotai/backend/models/: __init__.py  profile.py
src/dotai/backend/routers/: profile.py
src/dotai/backend/src/: config.py  main.py
src/dotai/backend/src/models/: profile.py
src/dotai/backend/src/routers/: profile.py
tests/: books.spec.ts  calendar.spec.ts  example.spec.ts  files.spec.ts  modal-dialog.spec.ts  photos.spec.ts
word/: document.xml  gdoc-ordered.xml  gdoc-unordered.xml  gdoc.xml  numbering-gdoc-ordered.xml  numbering-gdoc-unordered.xml  numbering.xml  quill.xml  styles.xml
(+868 files in other folders)
