[build-system]
requires = ["setuptools==78.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "autobutler-app"
version = "0.1.0"
description = "A description of your project"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "James Orson", email = "jamesaorson@gmail.com" }]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
# Configure setuptools to load dependencies from requirements.txt at build time.
dependencies = { file = "requirements.txt" }

[project.scripts]
butlerctl = "autobutler:main"
