[build-system]
requires = ["setuptools==78.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "flowtools"
version = "0.1.0"
description = "Simple shared tools for Python applications."
readme = "README.md"
requires-python = "~=3.13.0"
license-files = ["LICENSE"]
authors = [
    { name = "James Orson", email = "jamesaorson@gmail.com" },
    { name = "Brandon Apol", email = "brandonapol@pm.me"},
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
# Configure setuptools to load dependencies from requirements.txt at build time.
dependencies = { file = "requirements.txt" }

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
